hdparm-9.53:
	- Read Drive Capacity fixes from Iestyn Walters.
	- SET MAX ADDRESS fixes from Tom Yan <tom.ty89@gmail.com>.
	- added --security-prompt-for-password to --security-help output.
	- fwdownload changes from Jihoon Lee.
hdparm-9.52:
	- Jmicron SATA-USB bridge support from Jan Friesse <jfriesse@gmail.com>.
hdparm-9.51:
	- add support for Jmicron USB-SATA bridges, courtesy Jan Friesse <jfriesse@gmail.com>.
hdparm-9.51:
	- New --security-prompt-for-password flag for use with the various --security- actions.
	- Makefile tweak from Mike Frysinger.
	- fix spelling/typos in man page and "removable", courtesy of Alex Mestiashvili.
	- fix spelling/typos in --sanitize-crypto-scramble, courtesy of Tom Yan.
	- fix NULL password handling in --security-unlock, courtesy of Tom Yan.
hdparm-9.50:
	- minor fixes for sanitize device stuff.
hdparm-9.49:
	- add ACS-3 overprovisioning support, courtesy of Intel.
	- fix bug in display of security section and use updated erase-time values from ACS-3, courtesy of Patrick Higgins.
	- increase timeout on fwdownload to 2 minutes, courtesy of Rusy Carruth.
	- fix bugs from devslp patch.
hdparm-9.48:
	- fix bugs from devslp patch.
hdparm-9.47:
	- added devslp patch (IDENTIFY word 76) from David Woodhouse.
	- help and manpage fixes from Michal Minar.
hdparm-9.46:
	- fix compilation with "musl libc".
	- added "hex:aabbcc.." for binary security passwords.
	- return EIO when read_big_block() fails
	- use llabs() rather than abs() in identify.c
hdparm-9.45:
	- fixed blocksize handling in fibmap code to use result from FIGETBSZ in more places (Anton Altaparmakov).
	- fixed divide by zero exception in geom.c
	- tidying up formatting in sgio.c
hdparm-9.44:
	- changed reg_flags struct to more closely match kernel definition (Lucas Magasweran).
	- added fwdownload mode "E" support (Rusty Carruth).
	- fix timeouts for security-erase (again!)
	- change display of security "supported" to handle ambiguous reporting from drives