@@ -1,4 +1,4 @@
-.TH HDPARM 8 "January 2017" "Version 9.51"
+.TH HDPARM 8 "February 2018" "Version 9.54"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
